Update
Games added and corrected the discounts
