# API/Infernum-API/app/Http/Resources/GenreResource.php
@@ -14,16 +14,14 @@ class GenreResource extends JsonResource
         type: 'object',
         properties: [
             new OA\Property(property: 'id', type: 'integer', example: 1),
-            new OA\Property(property: 'type', type: 'string', example: 'Accion'),
-            new OA\Property(property: 'principal', type: 'bool', example: 1)
+            new OA\Property(property: 'type', type: 'string', example: 'Accion')
         ]
     )]
     public function toArray(Request $request): array
     {
         return[
             'id' => $this->id,
-            'type' => $this->type,
-            'principal' => $this->principal
+            'type' => $this->type
         ];
     }
 }
